--- a/style.css
+++ b/style.css
@@ -7,29 +7,54 @@ body {
     background-color: beige;
 }
 
-.tetris-container {
-    text-align: center;
+.main-container {
+    border: 1px solid black;
+    width: 800px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 .game-board {
-    display: grid;
-    grid-template-columns: repeat(10, 30px); /* Ajusta el tamaño del tablero según tus necesidades */
-    grid-template-rows: repeat(20, 30px); /* Ajusta el tamaño del tablero según tus necesidades */
-    gap: 1px;
-    border: 1px solid #ccc;
-    background-color: #fff;
+    flex-basis: 65%;
+    border: 1px solid red;
+    position: relative;
 }
 
-.game-board div {
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    border: 1px solid #eee;
+.options-board {
+    flex-basis: 35%;
+    border: 1px solid blue;
 }
 
-.score {
-    margin-top: 20px;
-    font-size: 18px;
+/* Estilos para los personajes */
+.character {
+    width: 100px;
+    height: 100px;
+    position: absolute;
 }
 
-/* Agrega estilos específicos según las necesidades del juego, por ejemplo, para las piezas del Tetris */
+.player {
+    background-color: green;
+}
+
+.enemy {
+    background-color: red;
+}
+
+/* Estilos para las opciones */
+.options-board {
+    flex-basis: 35%;
+    border: 1px solid blue;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.option-btn {
+    margin: 10px;
+    padding: 8px 16px;
+    font-size: 16px;
+    cursor: pointer;
+    width: 35%;
+}
